# nu_plugin_kubectl

./: Cargo.toml
src/: kubectl.rs  lib.rs  main.rs
src/nu/: mod.rs
src/plugins/: config.rs
